--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "deps/SceneGraph"]
+[submodule "SceneGraph"]
 	path = SceneGraph
 	url = https://github.com/lemourin/SceneGraph.git
+[submodule "Box2D"]
+	path = Box2D
+	url = https://github.com/lemourin/Box2D.git
